--- a/Homework2/app/src/main/res/layout/activity_self_info.xml
+++ b/Homework2/app/src/main/res/layout/activity_self_info.xml
@@ -88,6 +88,15 @@
                 android:text="通信地址"
                 android:textSize="20sp" />
 
+        <TextView
+                android:id="@+id/address_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="10dp"
+                android:text=""
+                android:textSize="20sp"/>
+
         <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
