--- a/Homework3/app/src/main/res/layout/activity_item.xml
+++ b/Homework3/app/src/main/res/layout/activity_item.xml
@@ -3,9 +3,14 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
 
+    <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/app_image"/>
+
     <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv_name"/>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/app_name"/>
 
 </LinearLayout>
