--- a/Homework3/app/src/main/res/layout/activity_main.xml
+++ b/Homework3/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,9 @@
     <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/rv_list"/>
+            android:id="@+id/rv_list"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
 
   </androidx.constraintlayout.widget.ConstraintLayout>
